[package]
name = "rustnews"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
chrono = { version = "0.4", features = ["clock"] }
serde_json = "1.0"
glob = "0.3.1"
rand = "0.8"
